# ohos_uitest_agent_vnc

./: CMakeLists.txt  README.md  agent.c  agent.h  uitest.c  uitest.h
third/libjpeg/lib/: libjpeg.so.62
third/libpng/lib/cmake/PNG/: PNGTargets-release.cmake
third/libpng/lib/libpng/: libpng16-release.cmake
third/libvncserver/lib/cmake/LibVNCServer/: LibVNCServerTargets-release.cmake  LibVNCServerTargets.cmake
third/libvncserver/lib/pkgconfig/: libvncserver.pc
third/ohos/: extension_c_api.h
